--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
          <span class="overhad__head the-end">Кінець</span>
       </span>
    </div>
-   <img src="/img/Layer_43.png" alt="">
+   <div><img src="/img/Layer_43.png" alt=""></div>
 </body>
 
 </html>
