--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <h3>Easily Customised</h3>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare
                vel eu leo. Donec ullamcorper nulla </p>
-               <p class="i">Это пробное испытание клонирования и отправки проекта и commit</p>
+               <p>Это пробное испытание клонирования и отправки проекта и commit</p>
                <h2>Repeat project flex</h2>
          </div>
       </div>
