--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare
                vel eu leo. Donec ullamcorper nulla </p>
                <p>Это пробное испытание клонирования и отправки проекта и commit</p>
-               <h2>Repeat project flex</h2>
+               <h2 class="wrap">Repeat project flex</h2>
          </div>
       </div>
    </div>
