--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="ru">
 
 <head>
    <meta charset="utf-8">
@@ -15,7 +15,7 @@
    <div class="flipper">
       <span class="flipper-object flipper-vertical">
          <span class="panel front">introduction</span>
-         <span class="panel back">t</span>
+         <span class="panel back">tsdfsdf</span>
       </span>
    </div>
 
@@ -26,6 +26,8 @@
       </span>
    </div>
    <!-- Тренировка по transform/persrective -->
+
+   </div>
    <div class="wrap">
       <span class="conteiner iner">
          <span class="open item">Front</span>
@@ -39,7 +41,41 @@
          <span class="overhad__head the-end">Кінець</span>
       </span>
    </div>
-   <div><img src="/img/Layer_43.png" alt=""></div>
+
+   <figure class="figure">
+      <div class="figure__block intern">
+         <img class="figure__image front-one" src="/img/Layer_43.png" alt="">
+         <figcaption class="figure__image back-end">Это портфель</figcaption>
+      </div>
+   </figure>
+
+
+   <div class="tech">
+      <button class="btn" type="button">СПОРТ1</button>
+      <button class="btn-but" type="button">12345</button>
+      <button class="but" type="button">98765</button>
+      <div class="color">
+         <div class="text-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. In voluptates et quibusdam molestiae recusandae
+            blanditiis suscipit alias eos ex consequuntur, praesentium fugit ad nam consectetur corrupti quisquam omnis
+            commodi molestias! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quam sint cupiditate?
+            Fugiat, alias atque exercitationem quas minus saepe impedit est minima iste at sit mollitia possimus quo,
+            facere temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, eum maxime! Magni
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi labore esse
+            accusamus. Quam culpa molestias ipsa iste sint commodi sed possimus veritatis, in doloribus iure libero.
+         </div>
+      </div>
+      <h1 class="announcement">АНИМАЦИЯ</h1>
+      <div class="quad">
+         <div class="antena ocean">
+            <span class="cobra marse">Ogogogo</span>
+            <span class="cobra saturn"><a href="#">YES YES</a></span>
+         </div>
+      </div>
+   </div>
+   <div class="frame">
+      <button class="circle" type="text"></button>
+   </div>
 </body>
 
 </html>
