--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                vel eu leo. Donec ullamcorper nulla </p>
                <p>Это пробное испытание клонирования и отправки проекта и commit</p>
                <h2>Repeat project flex</h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, dolorum. Iste veniam harum saepe vel, dignissimos consectetur sapiente doloremque atque hic ipsa illum maiores cupiditate. Soluta velit voluptatibus nobis laudantium?</p>
          </div>
       </div>
    </div>
